--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dataverse-integration</groupId>
-  <artifactId>find-day-process</artifactId>
+  <artifactId>item-master-data-process</artifactId>
   <version>1.0.2-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>item-master-data-process</name>
